--- a/Latex/lego_images.tex
+++ b/Latex/lego_images.tex
@@ -1,98 +1,4 @@
 \newpage
-\section*{\centering \hyperref[contents]{Classic}}\label{image:Classic}
-\begin{figure}[H]\begin{flushleft}
-\image{200}{Family}{}
-\image{261}{Complete Kitchen Set}{}
-\image{335}{Transport Truck}{}
-\image{336}{Fire Engine}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{344}{Bungalow}{}
-\image{347}{Fire Station with Mini Cars}{}
-\image{348}{Garage with Automatic Doors}{2x}
-\image{351}{Loader Hopper with Truck}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{611}{Police Car}{}
-\image{615}{Fork Lift with Driver}{}
-\image{621}{Shell Tanker Truck}{}
-\image{622}{Baggage Carts}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{623}{White Car and Camper}{}
-\image{643}{Mobile Crane}{}
-\image{645}{Milk Float \& Trailer}{}
-\image{646}{Mobile Site Office}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{650}{Car with Trailer and Racing Car}{}
-\image{661}{Spirit of St. Louis}{}
-\image{1550}{Sterling Super Caravelle}{2x}
-\image{1551}{Sterling Luggage Carrier}{2x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{801}{Gear Set}{}
-\image{802}{Gear Supplementary Set}{5x}
-\image{995}{Lighting Bricks with Color Filters}{}
-\image{212-1}{Small House}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{213-2}{Small House}{}
-\image{330-3}{Jeep}{}
-\image{329}{Antique Car}{}
-\image{337-2}{Truck with Crane and Caterpillar Track}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{602-2}{Fire Truck}{}
-\end{flushleft}\end{figure}
-\newpage
-\section*{\centering \hyperref[contents]{Classic Basic}}\label{image:Classic Basic}
-\begin{figure}[H]\begin{flushleft}
-\image{994}{fences with garden gates}{2x}
-\image{401-2}{Large Wheels with Axles}{2x}
-\image{901-2}{2 Large Wheels with Accessories}{4x}
-\image{400-4}{Small Wheels with Axles}{3x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{900-2}{4 Small Wheels with Accessories}{}
-\image{700-1-1-1}{Individual 2 x 4 Bricks}{}
-\image{417-4}{Cornerbricks}{}
-\image{414-6}{Windows Parts Pack, White}{2x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{481-6}{Slopes Regular, Double, Angle, Valley and Corner, Blue}{}
-\image{481-4}{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{}
-\image{480-5}{Slopes and Slopes Double 2 x 4, Blue}{}
-\image{480-6}{Slopes and Slopes Double 2 x 4, Red}{4x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{482-4}{Slopes and Slopes Double 2 x 2, Blue}{}
-\image{423-3}{Curved and Round Bricks}{5x}
-\image{224-3}{2 x 2 Curved Bricks}{}
-\image{915-1}{6 bricks with 16 and 20 studs and 3 Angle Bricks}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{218-2}{2 x 4 Bricks}{7x}
-\image{220-1}{2 x 2 Bricks}{2x}
-\image{971-1}{52 flat tile bricks}{5x}
-\image{988-1}{Alphabet Bricks}{2x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{987-1}{Number Bricks}{}
-\image{488-1}{1 x 1 Bricks with Letters}{}
-\image{437-1}{50 numbered bricks}{}
-\image{906-1}{12 doors and 5 hinges}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{402-2}{White Turntables}{}
-\image{022-1}{Basic Building Set}{}
-\image{481-3}{Slopes and Slopes Double 2 x 3 and 2 x 1, Red}{}
-\image{483-5}{Angle, Valley and Corner Slopes, Blue}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{055-2}{Basic Building Set}{}
-\end{flushleft}\end{figure}
-\newpage
 \section*{\centering \hyperref[contents]{Racers}}\label{image:Racers}
 \begin{figure}[H]\begin{flushleft}
 \image{4566}{Gear}{}
@@ -231,23 +137,6 @@
 \image{8763}{Toa Norik}{}
 \end{flushleft}\end{figure}
 \newpage
-\section*{\centering \hyperref[contents]{Classic Train}}\label{image:Classic Train}
-\begin{figure}[H]\begin{flushleft}
-\image{103}{4.5V Motor Set}{2x}
-\image{125}{Tipping Wagon}{}
-\image{126}{Steam Locomotive}{}
-\image{150}{Straight Track}{4x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{151}{Curved Track}{4x}
-\image{154}{Switch Track}{}
-\image{155}{2 Cross Rails}{2x}
-\image{158}{Railroad Crossing Gate}{2x}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{343}{Train Ferry}{}
-\end{flushleft}\end{figure}
-\newpage
 \section*{\centering \hyperref[contents]{Castle}}\label{image:Castle}
 \begin{figure}[H]\begin{flushleft}
 \image{7090}{Crossbow Attack}{}
@@ -274,20 +163,6 @@
 \image{6720}{Tyrannosaurus Rex}{}
 \image{6721}{Mosasaurus}{}
 \image{6722}{Styracosaurus}{}
-\end{flushleft}\end{figure}
-\newpage
-\section*{\centering \hyperref[contents]{Classic Baseplate}}\label{image:Classic Baseplate}
-\begin{figure}[H]\begin{flushleft}
-\image{700-E}{Individual 10 x 20 Baseplate}{2x}
-\image{700-1}{10 x 20 Brickplate}{5x}
-\image{796-1}{Baseplates, Green and Yellow}{3x}
-\image{797-1}{2 large baseplates, gray/white}{}
-\end{flushleft}\end{figure}
-\begin{figure}[H]\begin{flushleft}
-\image{795-1}{Baseplates, Red and Blue}{}
-\image{798}{Baseplates, Green}{2x}
-\image{449-1}{50 x 50 Large Baseplate}{}
-\image{800-3}{Town Plan}{}
 \end{flushleft}\end{figure}
 \newpage
 \section*{\centering \hyperref[contents]{Designer}}\label{image:Designer}
@@ -420,4 +295,130 @@
 \section*{\centering \hyperref[contents]{Domanico Delanico}}\label{image:Domanico Delanico}
 \begin{figure}[H]\begin{flushleft}
 \image{484}{Flying Frog}{2x}
+\end{flushleft}\end{figure}
+\newpage
+\section*{\centering \hyperref[contents]{Classic Basic}}\label{image:Classic Basic}
+\begin{figure}[H]\begin{flushleft}
+\image{400-4}{Small Wheels with Axles}{3x}
+\image{401-2}{Large Wheels with Axles}{2x}
+\image{900-2}{4 Small Wheels with Accessories}{}
+\image{901-2}{2 Large Wheels with Accessories}{4x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{994-1}{Fences with garden gates}{2x}
+\image{700-0}{Individual 2 x 4 Bricks}{}
+\image{417-4}{Cornerbricks}{}
+\image{414-6}{Windows Parts Pack, White}{2x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{481-6}{Slopes Regular, Double, Angle, Valley and Corner, Blue}{}
+\image{481-4}{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{}
+\image{480-5}{Slopes and Slopes Double 2 x 4, Blue}{}
+\image{480-6}{Slopes and Slopes Double 2 x 4, Red}{4x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{482-4}{Slopes and Slopes Double 2 x 2, Blue}{}
+\image{423-3}{Curved and Round Bricks}{5x}
+\image{224-3}{2 x 2 Curved Bricks}{}
+\image{915-1}{6 bricks with 16 and 20 studs and 3 Angle Bricks}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{218-2}{2 x 4 Bricks}{7x}
+\image{220-1}{2 x 2 Bricks}{2x}
+\image{971-1}{52 flat tile bricks}{5x}
+\image{988-1}{Alphabet Bricks}{2x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{987-1}{Number Bricks}{}
+\image{488-1}{1 x 1 Bricks with Letters}{}
+\image{437-1}{50 numbered bricks}{}
+\image{906-1}{12 doors and 5 hinges}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{402-2}{White Turntables}{}
+\image{022-1}{Basic Building Set}{}
+\image{481-3}{Slopes and Slopes Double 2 x 3 and 2 x 1, Red}{}
+\image{483-5}{Angle, Valley and Corner Slopes, Blue}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{055-2}{Basic Building Set}{}
+\image{801-1}{Gear Set}{}
+\image{802-1}{Gear Supplementary Set}{5x}
+\image{995-1}{Lighting Bricks with Color Filters}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{902-1}{5 Turntables}{2x}
+\end{flushleft}\end{figure}
+\newpage
+\section*{\centering \hyperref[contents]{Classic}}\label{image:Classic}
+\begin{figure}[H]\begin{flushleft}
+\image{200}{Family}{}
+\image{261}{Complete Kitchen Set}{}
+\image{335}{Transport Truck}{}
+\image{336}{Fire Engine}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{344}{Bungalow}{}
+\image{347}{Fire Station with Mini Cars}{}
+\image{348}{Garage with Automatic Doors}{2x}
+\image{351}{Loader Hopper with Truck}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{611}{Police Car}{}
+\image{615}{Fork Lift with Driver}{}
+\image{621}{Shell Tanker Truck}{}
+\image{622}{Baggage Carts}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{623}{White Car and Camper}{}
+\image{643}{Mobile Crane}{}
+\image{645}{Milk Float \& Trailer}{}
+\image{646}{Mobile Site Office}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{650}{Car with Trailer and Racing Car}{}
+\image{661}{Spirit of St. Louis}{}
+\image{1550}{Sterling Super Caravelle}{2x}
+\image{1551}{Sterling Luggage Carrier}{2x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{212-1}{Small House}{}
+\image{213-2}{Small House}{}
+\image{330-3}{Jeep}{}
+\image{329}{Antique Car}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{337-2}{Truck with Crane and Caterpillar Track}{}
+\image{602-2}{Fire Truck}{}
+\end{flushleft}\end{figure}
+\newpage
+\section*{\centering \hyperref[contents]{Classic Train}}\label{image:Classic Train}
+\begin{figure}[H]\begin{flushleft}
+\image{103-1}{4.5V Motor Set with Rubber Tracks}{2x}
+\image{125}{Tipping Wagon}{}
+\image{126}{Steam Locomotive}{}
+\image{150}{Straight Track}{4x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{151}{Curved Track}{4x}
+\image{154}{Switch Track}{}
+\image{155}{2 Cross Rails}{2x}
+\image{158}{Railroad Crossing Gate}{2x}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{343}{Train Ferry}{}
+\end{flushleft}\end{figure}
+\newpage
+\section*{\centering \hyperref[contents]{Classic Baseplate}}\label{image:Classic Baseplate}
+\begin{figure}[H]\begin{flushleft}
+\image{700-E}{Individual 10 x 20 Baseplate}{2x}
+\image{700-1}{10 x 20 Brickplate}{5x}
+\image{796-1}{Baseplates, Green and Yellow}{3x}
+\image{797-1}{2 large baseplates, gray/white}{}
+\end{flushleft}\end{figure}
+\begin{figure}[H]\begin{flushleft}
+\image{795-1}{Baseplates, Red and Blue}{}
+\image{798}{Baseplates, Green}{2x}
+\image{449-1}{50 x 50 Large Baseplate}{}
+\image{800-3}{Town Plan}{}
 \end{flushleft}\end{figure}
