--- a/Latex/lego_tables.tex
+++ b/Latex/lego_tables.tex
@@ -1,15 +1,11 @@
 \begin{alllegotable}
-\allelem{Classic}{2007}{\$28}{36}{(29)}{12}{}{1958--1976}
-\hline\allelem{Classic Basic}{1581}{\$1}{56}{(29)}{28}{(17)}{1950--1969}
-\hline\allelem{Racers}{1658}{\$179}{26}{(25)}{23}{(22)}{2001--2009}
+\allelem{Racers}{1658}{\$179}{26}{(25)}{23}{(22)}{2001--2009}
 \hline\allelem{Technic}{4138}{\$460}{15}{}{15}{}{1998--2010}
 \hline\allelem{City}{2140}{\$233}{20}{(14)}{19}{(14)}{2004--2009}
 \hline\allelem{System}{286}{\$25}{17}{(14)}{16}{(13)}{1997--2001}
 \hline\allelem{Bionicle}{518}{\$109}{14}{}{14}{}{2001--2006}
-\hline\allelem{Classic Train}{513}{\$36}{18}{(9)}{14}{(6)}{1966--1970}
 \hline\allelem{Castle}{193}{\$34}{8}{}{6}{}{2000--2010}
 \hline\allelem{Dinosaurs}{204}{\$52}{8}{}{8}{}{2001}
-\hline\allelem{Classic Baseplate}{23}{\$6}{16}{(8)}{11}{(6)}{1954--1972}
 \hline\allelem{Designer}{3007}{\$150}{16}{(7)}{16}{(7)}{2003--2005}
 \hline\allelem{Power Miners}{1121}{\$158}{5}{}{3}{}{2009--2010}
 \hline\allelem{Basic}{2002}{\$51}{6}{(5)}{4}{(3)}{2003--2005}
@@ -30,133 +26,13 @@
 \hline\allelem{Island Xtreme Stunts}{46}{\$7}{1}{}{1}{}{2002}
 \hline\allelem{Adventurers}{62}{\$8}{1}{}{0}{}{2003}
 \hline\allelem{Domanico Delanico}{86}{\$0}{2}{(1)}{0}{(1)}{2003}
+\hline\allelem{Classic Basic}{1867}{\$0}{65}{(33)}{30}{(19)}{1950--1970}
+\hline\allelem{Classic}{1731}{\$28}{29}{(26)}{11}{}{1958--1976}
+\hline\allelem{Classic Train}{513}{\$36}{18}{(9)}{14}{(6)}{1966--1970}
+\hline\allelem{Classic Baseplate}{23}{\$6}{16}{(8)}{11}{(6)}{1954--1972}
 \hline\hline
-All Lego & 26392 & \$2219 & 292 & (219) & 211 & (168) & 1950--2010\end{alllegotable}
+All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegotable}
 \newpage
-\begin{legotable}{Classic}
-\elem{Family}{200}{Yes}{No}{No}{1974}{78}{1}{\$4.99}
-\hline
-\elem{Complete Kitchen Set}{261}{Yes}{No}{No}{1971}{158}{1}{N/A}
-\hline
-\elem{Transport Truck}{335}{Yes}{No}{No}{1967}{99}{1}{N/A}
-\hline
-\elem{Fire Engine}{336}{Yes}{Yes}{No}{1968}{76}{1}{N/A}
-\hline
-\elem{Bungalow}{344}{Yes}{No}{No}{1969}{77}{1}{N/A}
-\hline
-\elem{Fire Station with Mini Cars}{347}{Yes}{No}{No}{1970}{189}{1}{N/A}
-\hline
-\elem{Garage with Automatic Doors}{348}{Yes}{1}{No}{1971}{38}{2}{\$0.99}
-\hline
-\elem{Loader Hopper with Truck}{351}{Yes}{No}{No}{1971}{165}{1}{\$2.49}
-\hline
-\elem{Police Car}{611}{Yes}{Yes}{No}{1973}{15}{1}{\$3.49}
-\hline
-\elem{Fork Lift with Driver}{615}{Yes}{No}{No}{1975}{13}{1}{N/A}
-\hline
-\elem{Shell Tanker Truck}{621}{Yes}{Yes}{No}{1970}{35}{1}{N/A}
-\hline
-\elem{Baggage Carts}{622}{Yes}{Yes}{No}{1970}{33}{1}{N/A}
-\hline
-\elem{White Car and Camper}{623}{Yes}{Yes}{No}{1970}{32}{1}{N/A}
-\hline
-\elem{Mobile Crane}{643}{Yes}{No}{No}{1971}{27}{1}{N/A}
-\hline
-\elem{Milk Float \& Trailer}{645}{Yes}{Yes}{No}{1971}{47}{1}{N/A}
-\hline
-\elem{Mobile Site Office}{646}{Yes}{Yes}{No}{1971}{43}{1}{N/A}
-\hline
-\elem{Car with Trailer and Racing Car}{650}{Yes}{No}{No}{1972}{30}{1}{\$5.49}
-\hline
-\elem{Spirit of St. Louis}{661}{Yes}{No}{No}{1976}{50}{1}{\$9.99}
-\hline
-\elem{Sterling Super Caravelle}{1550}{Yes}{1}{No}{1972}{44}{2}{N/A}
-\hline
-\elem{Sterling Luggage Carrier}{1551}{Yes}{1}{No}{1972}{33}{2}{N/A}
-\hline
-\elem{Gear Set}{801}{Yes}{No}{Yes}{1970}{111}{1}{N/A}
-\hline
-\elem{Gear Supplementary Set}{802}{Yes}{1}{Yes}{1970}{30}{5}{N/A}
-\hline
-\elem{Lighting Bricks with Color Filters}{995}{Yes}{No}{No}{1969}{15}{1}{N/A}
-\hline
-\elem{Small House}{212-1}{Yes}{No}{No}{1958}{21}{1}{N/A}
-\hline
-\elem{Small House}{213-2}{Yes}{No}{No}{1958}{21}{1}{N/A}
-\hline
-\elem{Jeep}{330-3}{Yes}{Yes}{No}{1968}{65}{1}{N/A}
-\hline
-\elem{Antique Car}{329}{Yes}{No}{No}{1967}{111}{1}{N/A}
-\hline
-\elem{Truck with Crane and Caterpillar Track}{337-2}{Yes}{No}{No}{1969}{92}{1}{N/A}
-\hline
-\elem{Fire Truck}{602-2}{Yes}{No}{No}{1970}{24}{1}{N/A}
-\hline
-\hline
-\bfseries Sum&&\multicolumn{2}{r|}{12\hspace{7pt}\ }&\multicolumn{2}{r|}{1958--1976}&2007&\$28.43&36 (29)
-\end{legotable}
-\begin{legotable}{Classic Basic}
-\elem{fences with garden gates}{994}{No}{1}{Yes}{1969}{19}{2}{\$0.50}
-\hline
-\elem{Large Wheels with Axles}{401-2}{No}{2}{Yes}{1966}{7}{2}{N/A}
-\hline
-\elem{2 Large Wheels with Accessories}{901-2}{No}{2}{Yes}{1969}{7}{4}{N/A}
-\hline
-\elem{Small Wheels with Axles}{400-4}{No}{2}{Yes}{1963}{12}{3}{N/A}
-\hline
-\elem{4 Small Wheels with Accessories}{900-2}{No}{Yes}{Yes}{1969}{12}{1}{N/A}
-\hline
-\elem{Individual 2 x 4 Bricks}{700-1-1-1}{No}{Yes}{Yes}{1950}{1}{1}{N/A}
-\hline
-\elem{Cornerbricks}{417-4}{No}{Yes}{Yes}{1966}{10}{1}{N/A}
-\hline
-\elem{Windows Parts Pack, White}{414-6}{No}{2}{Yes}{1966}{10}{2}{N/A}
-\hline
-\elem{Slopes Regular, Double, Angle, Valley and Corner, Blue}{481-6}{No}{Yes}{Yes}{1966}{34}{1}{N/A}
-\hline
-\elem{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{481-4}{No}{No}{Yes}{1966}{21}{1}{N/A}
-\hline
-\elem{Slopes and Slopes Double 2 x 4, Blue}{480-5}{No}{Yes}{Yes}{1966}{14}{1}{N/A}
-\hline
-\elem{Slopes and Slopes Double 2 x 4, Red}{480-6}{No}{3}{Yes}{1966}{23}{4}{N/A}
-\hline
-\elem{Slopes and Slopes Double 2 x 2, Blue}{482-4}{No}{No}{Yes}{1966}{22}{1}{N/A}
-\hline
-\elem{Curved and Round Bricks}{423-3}{No}{2}{Yes}{1966}{28}{5}{N/A}
-\hline
-\elem{2 x 2 Curved Bricks}{224-3}{No}{Yes}{Yes}{1958}{20}{1}{N/A}
-\hline
-\elem{6 bricks with 16 and 20 studs and 3 Angle Bricks}{915-1}{No}{No}{Yes}{1969}{9}{1}{N/A}
-\hline
-\elem{2 x 4 Bricks}{218-2}{No}{5}{Yes}{1958}{13}{7}{N/A}
-\hline
-\elem{2 x 2 Bricks}{220-1}{No}{1}{Yes}{1958}{20}{2}{N/A}
-\hline
-\elem{52 flat tile bricks}{971-1}{No}{1}{Yes}{1969}{52}{5}{N/A}
-\hline
-\elem{Alphabet Bricks}{988-1}{No}{1}{Yes}{1969}{52}{2}{N/A}
-\hline
-\elem{Number Bricks}{987-1}{No}{No}{Yes}{1969}{52}{1}{N/A}
-\hline
-\elem{1 x 1 Bricks with Letters}{488-1}{No}{No}{Yes}{1966}{44}{1}{N/A}
-\hline
-\elem{50 numbered bricks}{437-1}{No}{No}{Yes}{1966}{50}{1}{N/A}
-\hline
-\elem{12 doors and 5 hinges}{906-1}{No}{No}{Yes}{1969}{17}{1}{N/A}
-\hline
-\elem{White Turntables}{402-2}{No}{No}{Yes}{1964}{5}{1}{N/A}
-\hline
-\elem{Basic Building Set}{022-1}{No}{No}{Yes}{1968}{110}{1}{N/A}
-\hline
-\elem{Slopes and Slopes Double 2 x 3 and 2 x 1, Red}{481-3}{No}{No}{Yes}{1966}{21}{1}{N/A}
-\hline
-\elem{Angle, Valley and Corner Slopes, Blue}{483-5}{No}{No}{Yes}{1966}{20}{1}{N/A}
-\hline
-\elem{Basic Building Set}{055-2}{No}{No}{Yes}{1968}{256}{1}{N/A}
-\hline
-\hline
-\bfseries Sum&&\multicolumn{2}{r|}{28 (17)}&\multicolumn{2}{r|}{1950--1969}&1581&\$1.00&56 (29)
-\end{legotable}
 \begin{legotable}{Racers}
 \elem{Gear}{4566}{Yes}{Yes}{Yes}{2001}{8}{1}{\$2.99}
 \hline
@@ -341,28 +217,6 @@ All Lego & 26392 & \$2219 & 292 & (219) & 211 & (168) & 1950--2010\end{alllegota
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{14\hspace{7pt}\ }&\multicolumn{2}{r|}{2001--2006}&518&\$108.86&14
 \end{legotable}
-\begin{legotable}{Classic Train}
-\elem{4.5V Motor Set}{103}{Yes}{0}{No}{1969}{20}{2}{N/A}
-\hline
-\elem{Tipping Wagon}{125}{Yes}{No}{No}{1969}{20}{1}{N/A}
-\hline
-\elem{Steam Locomotive}{126}{Yes}{No}{No}{1970}{60}{1}{\$5.49}
-\hline
-\elem{Straight Track}{150}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
-\hline
-\elem{Curved Track}{151}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
-\hline
-\elem{Switch Track}{154}{Yes}{Yes}{No}{1967}{4}{1}{\$1.99}
-\hline
-\elem{2 Cross Rails}{155}{Yes}{2}{No}{1967}{14}{2}{\$1.99}
-\hline
-\elem{Railroad Crossing Gate}{158}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
-\hline
-\elem{Train Ferry}{343}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
-\hline
-\hline
-\bfseries Sum&&\multicolumn{2}{r|}{14 (6)}&\multicolumn{2}{r|}{1966--1970}&513&\$36.38&18 (9)
-\end{legotable}
 \begin{legotable}{Castle}
 \elem{Crossbow Attack}{7090}{Yes}{Yes}{Yes}{2007}{40}{1}{\$5.99}
 \hline
@@ -402,26 +256,6 @@ All Lego & 26392 & \$2219 & 292 & (219) & 211 & (168) & 1950--2010\end{alllegota
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{8\hspace{7pt}\ }&\multicolumn{2}{r|}{2001}&204&\$51.92&8
-\end{legotable}
-\begin{legotable}{Classic Baseplate}
-\elem{Individual 10 x 20 Baseplate}{700-E}{No}{2}{Yes}{1954}{1}{2}{N/A}
-\hline
-\elem{10 x 20 Brickplate}{700-1}{No}{5}{Yes}{1966}{1}{5}{N/A}
-\hline
-\elem{Baseplates, Green and Yellow}{796-1}{No}{1}{Yes}{1971}{2}{3}{N/A}
-\hline
-\elem{2 large baseplates, gray/white}{797-1}{No}{Yes}{Yes}{1971}{2}{1}{N/A}
-\hline
-\elem{Baseplates, Red and Blue}{795-1}{No}{No}{Yes}{1971}{2}{1}{N/A}
-\hline
-\elem{Baseplates, Green}{798}{No}{1}{Yes}{1972}{2}{2}{\$3.10}
-\hline
-\elem{50 x 50 Large Baseplate}{449-1}{No}{No}{Yes}{1969}{1}{1}{N/A}
-\hline
-\elem{Town Plan}{800-3}{No}{Yes}{Yes}{1966}{1}{1}{N/A}
-\hline
-\hline
-\bfseries Sum&&\multicolumn{2}{r|}{11 (6)}&\multicolumn{2}{r|}{1954--1972}&23&\$6.20&16 (8)
 \end{legotable}
 \begin{legotable}{Designer}
 \elem{Robobots}{4099}{Yes}{Yes}{Yes}{2003}{324}{1}{\$19.99}
@@ -574,4 +408,172 @@ All Lego & 26392 & \$2219 & 292 & (219) & 211 & (168) & 1950--2010\end{alllegota
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{0 (1)}&\multicolumn{2}{r|}{2003}&86&\$0.00&2 (1)
+\end{legotable}
+\begin{legotable}{Classic Basic}
+\elem{Small Wheels with Axles}{400-4}{No}{2}{Yes}{1963}{12}{3}{N/A}
+\hline
+\elem{Large Wheels with Axles}{401-2}{No}{2}{Yes}{1966}{7}{2}{N/A}
+\hline
+\elem{4 Small Wheels with Accessories}{900-2}{No}{Yes}{Yes}{1969}{12}{1}{N/A}
+\hline
+\elem{2 Large Wheels with Accessories}{901-2}{No}{2}{Yes}{1969}{7}{4}{N/A}
+\hline
+\elem{Fences with garden gates}{994-1}{No}{1}{Yes}{1969}{19}{2}{N/A}
+\hline
+\elem{Individual 2 x 4 Bricks}{700-0}{No}{Yes}{Yes}{1950}{1}{1}{N/A}
+\hline
+\elem{Cornerbricks}{417-4}{No}{Yes}{Yes}{1966}{10}{1}{N/A}
+\hline
+\elem{Windows Parts Pack, White}{414-6}{No}{2}{Yes}{1966}{10}{2}{N/A}
+\hline
+\elem{Slopes Regular, Double, Angle, Valley and Corner, Blue}{481-6}{No}{Yes}{Yes}{1966}{34}{1}{N/A}
+\hline
+\elem{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{481-4}{No}{No}{Yes}{1966}{21}{1}{N/A}
+\hline
+\elem{Slopes and Slopes Double 2 x 4, Blue}{480-5}{No}{Yes}{Yes}{1966}{14}{1}{N/A}
+\hline
+\elem{Slopes and Slopes Double 2 x 4, Red}{480-6}{No}{3}{Yes}{1966}{23}{4}{N/A}
+\hline
+\elem{Slopes and Slopes Double 2 x 2, Blue}{482-4}{No}{No}{Yes}{1966}{22}{1}{N/A}
+\hline
+\elem{Curved and Round Bricks}{423-3}{No}{2}{Yes}{1966}{28}{5}{N/A}
+\hline
+\elem{2 x 2 Curved Bricks}{224-3}{No}{Yes}{Yes}{1958}{20}{1}{N/A}
+\hline
+\elem{6 bricks with 16 and 20 studs and 3 Angle Bricks}{915-1}{No}{No}{Yes}{1969}{9}{1}{N/A}
+\hline
+\elem{2 x 4 Bricks}{218-2}{No}{5}{Yes}{1958}{13}{7}{N/A}
+\hline
+\elem{2 x 2 Bricks}{220-1}{No}{1}{Yes}{1958}{20}{2}{N/A}
+\hline
+\elem{52 flat tile bricks}{971-1}{No}{1}{Yes}{1969}{52}{5}{N/A}
+\hline
+\elem{Alphabet Bricks}{988-1}{No}{1}{Yes}{1969}{52}{2}{N/A}
+\hline
+\elem{Number Bricks}{987-1}{No}{No}{Yes}{1969}{52}{1}{N/A}
+\hline
+\elem{1 x 1 Bricks with Letters}{488-1}{No}{No}{Yes}{1966}{44}{1}{N/A}
+\hline
+\elem{50 numbered bricks}{437-1}{No}{No}{Yes}{1966}{50}{1}{N/A}
+\hline
+\elem{12 doors and 5 hinges}{906-1}{No}{No}{Yes}{1969}{17}{1}{N/A}
+\hline
+\elem{White Turntables}{402-2}{No}{No}{Yes}{1964}{5}{1}{N/A}
+\hline
+\elem{Basic Building Set}{022-1}{No}{No}{Yes}{1968}{110}{1}{N/A}
+\hline
+\elem{Slopes and Slopes Double 2 x 3 and 2 x 1, Red}{481-3}{No}{No}{Yes}{1966}{21}{1}{N/A}
+\hline
+\elem{Angle, Valley and Corner Slopes, Blue}{483-5}{No}{No}{Yes}{1966}{20}{1}{N/A}
+\hline
+\elem{Basic Building Set}{055-2}{No}{No}{Yes}{1968}{256}{1}{N/A}
+\hline
+\elem{Gear Set}{801-1}{Yes}{No}{Yes}{1970}{111}{1}{N/A}
+\hline
+\elem{Gear Supplementary Set}{802-1}{Yes}{1}{Yes}{1970}{30}{5}{N/A}
+\hline
+\elem{Lighting Bricks with Color Filters}{995-1}{Yes}{No}{No}{1969}{15}{1}{N/A}
+\hline
+\elem{5 Turntables}{902-1}{Yes}{1}{No}{1969}{5}{2}{N/A}
+\hline
+\hline
+\bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1867&\$0.00&65 (33)
+\end{legotable}
+\begin{legotable}{Classic}
+\elem{Family}{200}{Yes}{No}{No}{1974}{78}{1}{\$4.99}
+\hline
+\elem{Complete Kitchen Set}{261}{Yes}{No}{No}{1971}{158}{1}{N/A}
+\hline
+\elem{Transport Truck}{335}{Yes}{No}{No}{1967}{99}{1}{N/A}
+\hline
+\elem{Fire Engine}{336}{Yes}{Yes}{No}{1968}{76}{1}{N/A}
+\hline
+\elem{Bungalow}{344}{Yes}{No}{No}{1969}{77}{1}{N/A}
+\hline
+\elem{Fire Station with Mini Cars}{347}{Yes}{No}{No}{1970}{189}{1}{N/A}
+\hline
+\elem{Garage with Automatic Doors}{348}{Yes}{1}{No}{1971}{38}{2}{\$0.99}
+\hline
+\elem{Loader Hopper with Truck}{351}{Yes}{No}{No}{1971}{165}{1}{\$2.49}
+\hline
+\elem{Police Car}{611}{Yes}{Yes}{No}{1973}{15}{1}{\$3.49}
+\hline
+\elem{Fork Lift with Driver}{615}{Yes}{No}{No}{1975}{13}{1}{N/A}
+\hline
+\elem{Shell Tanker Truck}{621}{Yes}{Yes}{No}{1970}{35}{1}{N/A}
+\hline
+\elem{Baggage Carts}{622}{Yes}{Yes}{No}{1970}{33}{1}{N/A}
+\hline
+\elem{White Car and Camper}{623}{Yes}{Yes}{No}{1970}{32}{1}{N/A}
+\hline
+\elem{Mobile Crane}{643}{Yes}{No}{No}{1971}{27}{1}{N/A}
+\hline
+\elem{Milk Float \& Trailer}{645}{Yes}{Yes}{No}{1971}{47}{1}{N/A}
+\hline
+\elem{Mobile Site Office}{646}{Yes}{Yes}{No}{1971}{43}{1}{N/A}
+\hline
+\elem{Car with Trailer and Racing Car}{650}{Yes}{No}{No}{1972}{30}{1}{\$5.49}
+\hline
+\elem{Spirit of St. Louis}{661}{Yes}{No}{No}{1976}{50}{1}{\$9.99}
+\hline
+\elem{Sterling Super Caravelle}{1550}{Yes}{1}{No}{1972}{44}{2}{N/A}
+\hline
+\elem{Sterling Luggage Carrier}{1551}{Yes}{1}{No}{1972}{33}{2}{N/A}
+\hline
+\elem{Small House}{212-1}{Yes}{No}{No}{1958}{21}{1}{N/A}
+\hline
+\elem{Small House}{213-2}{Yes}{No}{No}{1958}{21}{1}{N/A}
+\hline
+\elem{Jeep}{330-3}{Yes}{Yes}{No}{1968}{65}{1}{N/A}
+\hline
+\elem{Antique Car}{329}{Yes}{No}{No}{1967}{111}{1}{N/A}
+\hline
+\elem{Truck with Crane and Caterpillar Track}{337-2}{Yes}{No}{No}{1969}{92}{1}{N/A}
+\hline
+\elem{Fire Truck}{602-2}{Yes}{No}{No}{1970}{24}{1}{N/A}
+\hline
+\hline
+\bfseries Sum&&\multicolumn{2}{r|}{11\hspace{7pt}\ }&\multicolumn{2}{r|}{1958--1976}&1731&\$28.43&29 (26)
+\end{legotable}
+\begin{legotable}{Classic Train}
+\elem{4.5V Motor Set with Rubber Tracks}{103-1}{Yes}{0}{No}{1969}{20}{2}{N/A}
+\hline
+\elem{Tipping Wagon}{125}{Yes}{No}{No}{1969}{20}{1}{N/A}
+\hline
+\elem{Steam Locomotive}{126}{Yes}{No}{No}{1970}{60}{1}{\$5.49}
+\hline
+\elem{Straight Track}{150}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\hline
+\elem{Curved Track}{151}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\hline
+\elem{Switch Track}{154}{Yes}{Yes}{No}{1967}{4}{1}{\$1.99}
+\hline
+\elem{2 Cross Rails}{155}{Yes}{2}{No}{1967}{14}{2}{\$1.99}
+\hline
+\elem{Railroad Crossing Gate}{158}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
+\hline
+\elem{Train Ferry}{343}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
+\hline
+\hline
+\bfseries Sum&&\multicolumn{2}{r|}{14 (6)}&\multicolumn{2}{r|}{1966--1970}&513&\$36.38&18 (9)
+\end{legotable}
+\begin{legotable}{Classic Baseplate}
+\elem{Individual 10 x 20 Baseplate}{700-E}{No}{2}{Yes}{1954}{1}{2}{N/A}
+\hline
+\elem{10 x 20 Brickplate}{700-1}{No}{5}{Yes}{1966}{1}{5}{N/A}
+\hline
+\elem{Baseplates, Green and Yellow}{796-1}{No}{1}{Yes}{1971}{2}{3}{N/A}
+\hline
+\elem{2 large baseplates, gray/white}{797-1}{No}{Yes}{Yes}{1971}{2}{1}{N/A}
+\hline
+\elem{Baseplates, Red and Blue}{795-1}{No}{No}{Yes}{1971}{2}{1}{N/A}
+\hline
+\elem{Baseplates, Green}{798}{No}{1}{Yes}{1972}{2}{2}{\$3.10}
+\hline
+\elem{50 x 50 Large Baseplate}{449-1}{No}{No}{Yes}{1969}{1}{1}{N/A}
+\hline
+\elem{Town Plan}{800-3}{No}{Yes}{Yes}{1966}{1}{1}{N/A}
+\hline
+\hline
+\bfseries Sum&&\multicolumn{2}{r|}{11 (6)}&\multicolumn{2}{r|}{1954--1972}&23&\$6.20&16 (8)
 \end{legotable}
