--- a/Latex/lego_images.tex
+++ b/Latex/lego_images.tex
@@ -352,32 +352,32 @@
 \newpage
 \section*{\centering \hyperref[contents]{Classic}}\label{image:Classic}
 \begin{figure}[H]\begin{flushleft}
-\image{200}{Family}{}
-\image{261}{Complete Kitchen Set}{}
-\image{335}{Transport Truck}{}
-\image{336}{Fire Engine}{}
+\image{200-1}{Family}{}
+\image{261-4}{Complete Kitchen Set}{}
+\image{335-2}{Transport Truck}{}
+\image{336-1}{Fire Engine}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{344}{Bungalow}{}
-\image{347}{Fire Station with Mini Cars}{}
-\image{348}{Garage with Automatic Doors}{2x}
-\image{351}{Loader Hopper with Truck}{}
+\image{344-1}{Bungalow}{}
+\image{347-1}{Fire Station with Mini Cars}{}
+\image{348-1}{Garage with Automatic Doors}{2x}
+\image{351-1}{Loader Hopper with Truck}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{611}{Police Car}{}
-\image{615}{Fork Lift with Driver}{}
-\image{621}{Shell Tanker Truck}{}
-\image{622}{Baggage Carts}{}
+\image{611-1}{Police Car}{}
+\image{615-2}{Fork Lift with Driver}{}
+\image{621-2}{Shell Tanker Truck}{}
+\image{622-2}{Baggage Carts}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{623}{White Car and Camper}{}
-\image{643}{Mobile Crane}{}
-\image{645}{Milk Float \& Trailer}{}
-\image{646}{Mobile Site Office}{}
+\image{623-2}{White Car and Camper}{}
+\image{643-2}{Mobile Crane}{}
+\image{645-2}{Milk Float \& Trailer}{}
+\image{646-2}{Mobile Site Office}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{650}{Car with Trailer and Racing Car}{}
-\image{661}{Spirit of St. Louis}{}
+\image{650-1}{Car with Trailer and Racing Car}{}
+\image{661-1}{Spirit of St. Louis}{}
 \image{1550}{Sterling Super Caravelle}{2x}
 \image{1551}{Sterling Luggage Carrier}{2x}
 \end{flushleft}\end{figure}
@@ -385,7 +385,7 @@
 \image{212-1}{Small House}{}
 \image{213-2}{Small House}{}
 \image{330-3}{Jeep}{}
-\image{329}{Antique Car}{}
+\image{329-1}{Antique Car}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
 \image{337-2}{Truck with Crane and Caterpillar Track}{}
@@ -395,18 +395,18 @@
 \section*{\centering \hyperref[contents]{Classic Train}}\label{image:Classic Train}
 \begin{figure}[H]\begin{flushleft}
 \image{103-1}{4.5V Motor Set with Rubber Tracks}{2x}
-\image{125}{Tipping Wagon}{}
-\image{126}{Steam Locomotive}{}
-\image{150}{Straight Track}{4x}
+\image{125-1}{Tipping Wagon}{}
+\image{126-1}{Steam Locomotive}{}
+\image{150-1}{Straight Track}{4x}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{151}{Curved Track}{4x}
-\image{154}{Switch Track}{}
-\image{155}{2 Cross Rails}{2x}
-\image{158}{Railroad Crossing Gate}{2x}
+\image{151-1}{Curved Track}{4x}
+\image{154-1}{Switch Track}{}
+\image{155-1}{2 Cross Rails}{2x}
+\image{158-1}{Railroad Crossing Gate}{2x}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{343}{Train Ferry}{}
+\image{343-1}{Train Ferry}{}
 \end{flushleft}\end{figure}
 \newpage
 \section*{\centering \hyperref[contents]{Classic Baseplate}}\label{image:Classic Baseplate}
@@ -418,7 +418,7 @@
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
 \image{795-1}{Baseplates, Red and Blue}{}
-\image{798}{Baseplates, Green}{2x}
+\image{798-1}{Baseplates, Green}{2x}
 \image{449-1}{50 x 50 Large Baseplate}{}
 \image{800-3}{Town Plan}{}
 \end{flushleft}\end{figure}
