--- a/Latex/lego_tables.tex
+++ b/Latex/lego_tables.tex
@@ -100,23 +100,23 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Sky Flyer 1}{8204}{Yes}{Yes}{No}{1998}{41}{1}{\$4.99}
 \hline
-\elem{Mini Tractor}{8281}{Yes}{Yes}{Yes}{2006}{121}{1}{\$9.99}
+\elem{Mini Tractor}{8281}{Yes}{Yes}{No}{2006}{121}{1}{\$9.99}
 \hline
-\elem{Compact Excavator}{8047}{Yes}{Yes}{Yes}{2010}{252}{1}{\$24.99}
+\elem{Compact Excavator}{8047}{Yes}{Yes}{No}{2010}{252}{1}{\$24.99}
 \hline
-\elem{Wheel Loader}{8271}{Yes}{Yes}{Yes}{2007}{200}{1}{\$19.99}
+\elem{Wheel Loader}{8271}{Yes}{Yes}{No}{2007}{200}{1}{\$19.99}
 \hline
-\elem{Telehandler}{8283}{Yes}{Yes}{Yes}{2006}{323}{1}{\$29.99}
+\elem{Telehandler}{8283}{Yes}{Yes}{No}{2006}{323}{1}{\$29.99}
 \hline
-\elem{Aircraft}{8434}{Yes}{Yes}{Yes}{2004}{445}{1}{\$34.99}
+\elem{Aircraft}{8434}{Yes}{Yes}{No}{2004}{445}{1}{\$34.99}
 \hline
-\elem{Snow Groomer}{8263}{Yes}{Yes}{Yes}{2009}{590}{1}{\$49.99}
+\elem{Snow Groomer}{8263}{Yes}{Yes}{No}{2009}{590}{1}{\$49.99}
 \hline
-\elem{Crawler Crane}{8288}{Yes}{Yes}{Yes}{2006}{800}{1}{\$49.99}
+\elem{Crawler Crane}{8288}{Yes}{Yes}{No}{2006}{800}{1}{\$49.99}
 \hline
-\elem{Motorized Excavator}{8043}{Yes}{Yes}{Yes}{2010}{1123}{1}{\$199.99}
+\elem{Motorized Excavator}{8043}{Yes}{Yes}{No}{2010}{1123}{1}{\$199.99}
 \hline
-\elem{Motor Set}{8287}{Yes}{Yes}{Yes}{2006}{93}{1}{\$29.99}
+\elem{Motor Set}{8287}{Yes}{Yes}{No}{2006}{93}{1}{\$29.99}
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{15\hspace{7pt}\ }&\multicolumn{2}{r|}{1998--2010}&4138&\$459.89&15
@@ -480,41 +480,41 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1867&\$0.00&65 (33)
 \end{legotable}
 \begin{legotable}{Classic}
-\elem{Family}{200}{Yes}{No}{No}{1974}{78}{1}{\$4.99}
+\elem{Family}{200-1}{Yes}{No}{No}{1974}{78}{1}{\$4.99}
 \hline
-\elem{Complete Kitchen Set}{261}{Yes}{No}{No}{1971}{158}{1}{N/A}
+\elem{Complete Kitchen Set}{261-4}{Yes}{No}{No}{1971}{158}{1}{N/A}
 \hline
-\elem{Transport Truck}{335}{Yes}{No}{No}{1967}{99}{1}{N/A}
+\elem{Transport Truck}{335-2}{Yes}{No}{No}{1967}{99}{1}{N/A}
 \hline
-\elem{Fire Engine}{336}{Yes}{Yes}{No}{1968}{76}{1}{N/A}
+\elem{Fire Engine}{336-1}{Yes}{Yes}{No}{1968}{76}{1}{N/A}
 \hline
-\elem{Bungalow}{344}{Yes}{No}{No}{1969}{77}{1}{N/A}
+\elem{Bungalow}{344-1}{Yes}{No}{No}{1969}{77}{1}{N/A}
 \hline
-\elem{Fire Station with Mini Cars}{347}{Yes}{No}{No}{1970}{189}{1}{N/A}
+\elem{Fire Station with Mini Cars}{347-1}{Yes}{No}{No}{1970}{189}{1}{N/A}
 \hline
-\elem{Garage with Automatic Doors}{348}{Yes}{1}{No}{1971}{38}{2}{\$0.99}
+\elem{Garage with Automatic Doors}{348-1}{Yes}{1}{No}{1971}{38}{2}{\$0.99}
 \hline
-\elem{Loader Hopper with Truck}{351}{Yes}{No}{No}{1971}{165}{1}{\$2.49}
+\elem{Loader Hopper with Truck}{351-1}{Yes}{No}{No}{1971}{165}{1}{\$2.49}
 \hline
-\elem{Police Car}{611}{Yes}{Yes}{No}{1973}{15}{1}{\$3.49}
+\elem{Police Car}{611-1}{Yes}{Yes}{No}{1973}{15}{1}{\$3.49}
 \hline
-\elem{Fork Lift with Driver}{615}{Yes}{No}{No}{1975}{13}{1}{N/A}
+\elem{Fork Lift with Driver}{615-2}{Yes}{No}{No}{1975}{13}{1}{N/A}
 \hline
-\elem{Shell Tanker Truck}{621}{Yes}{Yes}{No}{1970}{35}{1}{N/A}
+\elem{Shell Tanker Truck}{621-2}{Yes}{Yes}{No}{1970}{35}{1}{N/A}
 \hline
-\elem{Baggage Carts}{622}{Yes}{Yes}{No}{1970}{33}{1}{N/A}
+\elem{Baggage Carts}{622-2}{Yes}{Yes}{No}{1970}{33}{1}{N/A}
 \hline
-\elem{White Car and Camper}{623}{Yes}{Yes}{No}{1970}{32}{1}{N/A}
+\elem{White Car and Camper}{623-2}{Yes}{Yes}{No}{1970}{32}{1}{N/A}
 \hline
-\elem{Mobile Crane}{643}{Yes}{No}{No}{1971}{27}{1}{N/A}
+\elem{Mobile Crane}{643-2}{Yes}{No}{No}{1971}{27}{1}{N/A}
 \hline
-\elem{Milk Float \& Trailer}{645}{Yes}{Yes}{No}{1971}{47}{1}{N/A}
+\elem{Milk Float \& Trailer}{645-2}{Yes}{Yes}{No}{1971}{47}{1}{N/A}
 \hline
-\elem{Mobile Site Office}{646}{Yes}{Yes}{No}{1971}{43}{1}{N/A}
+\elem{Mobile Site Office}{646-2}{Yes}{Yes}{No}{1971}{43}{1}{N/A}
 \hline
-\elem{Car with Trailer and Racing Car}{650}{Yes}{No}{No}{1972}{30}{1}{\$5.49}
+\elem{Car with Trailer and Racing Car}{650-1}{Yes}{No}{No}{1972}{30}{1}{\$5.49}
 \hline
-\elem{Spirit of St. Louis}{661}{Yes}{No}{No}{1976}{50}{1}{\$9.99}
+\elem{Spirit of St. Louis}{661-1}{Yes}{No}{No}{1976}{50}{1}{\$9.99}
 \hline
 \elem{Sterling Super Caravelle}{1550}{Yes}{1}{No}{1972}{44}{2}{N/A}
 \hline
@@ -526,7 +526,7 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Jeep}{330-3}{Yes}{Yes}{No}{1968}{65}{1}{N/A}
 \hline
-\elem{Antique Car}{329}{Yes}{No}{No}{1967}{111}{1}{N/A}
+\elem{Antique Car}{329-1}{Yes}{No}{No}{1967}{111}{1}{N/A}
 \hline
 \elem{Truck with Crane and Caterpillar Track}{337-2}{Yes}{No}{No}{1969}{92}{1}{N/A}
 \hline
@@ -538,21 +538,21 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \begin{legotable}{Classic Train}
 \elem{4.5V Motor Set with Rubber Tracks}{103-1}{Yes}{0}{No}{1969}{20}{2}{N/A}
 \hline
-\elem{Tipping Wagon}{125}{Yes}{No}{No}{1969}{20}{1}{N/A}
+\elem{Tipping Wagon}{125-1}{Yes}{No}{No}{1969}{20}{1}{N/A}
 \hline
-\elem{Steam Locomotive}{126}{Yes}{No}{No}{1970}{60}{1}{\$5.49}
+\elem{Steam Locomotive}{126-1}{Yes}{No}{No}{1970}{60}{1}{\$5.49}
 \hline
-\elem{Straight Track}{150}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\elem{Straight Track}{150-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
 \hline
-\elem{Curved Track}{151}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\elem{Curved Track}{151-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
 \hline
-\elem{Switch Track}{154}{Yes}{Yes}{No}{1967}{4}{1}{\$1.99}
+\elem{Switch Track}{154-1}{Yes}{Yes}{No}{1967}{4}{1}{\$1.99}
 \hline
-\elem{2 Cross Rails}{155}{Yes}{2}{No}{1967}{14}{2}{\$1.99}
+\elem{2 Cross Rails}{155-1}{Yes}{2}{No}{1967}{14}{2}{\$1.99}
 \hline
-\elem{Railroad Crossing Gate}{158}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
+\elem{Railroad Crossing Gate}{158-1}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
 \hline
-\elem{Train Ferry}{343}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
+\elem{Train Ferry}{343-1}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{14 (6)}&\multicolumn{2}{r|}{1966--1970}&513&\$36.38&18 (9)
@@ -568,7 +568,7 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Baseplates, Red and Blue}{795-1}{No}{No}{Yes}{1971}{2}{1}{N/A}
 \hline
-\elem{Baseplates, Green}{798}{No}{1}{Yes}{1972}{2}{2}{\$3.10}
+\elem{Baseplates, Green}{798-1}{No}{1}{Yes}{1972}{2}{2}{\$3.10}
 \hline
 \elem{50 x 50 Large Baseplate}{449-1}{No}{No}{Yes}{1969}{1}{1}{N/A}
 \hline
