--- a/Latex/lego_images.tex
+++ b/Latex/lego_images.tex
@@ -326,27 +326,28 @@
 \image{220-1}{2 x 2 Bricks}{2x}
 \image{224-3}{2 x 2 Curved Bricks}{}
 \image{423-3}{Curved and Round Bricks}{5x}
-\image{417-4}{Cornerbricks}{}
+\image{416-1}{4 Sixteens 2 Twenties}{2x}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
+\image{417-4}{Cornerbricks}{}
 \image{480-5}{Slopes and Slopes Double 2 x 4, Blue}{}
 \image{480-6}{Slopes and Slopes Double 2 x 4, Red}{4x}
 \image{481-3}{Slopes and Slopes Double 2 x 3 and 2 x 1, Red}{}
-\image{481-4}{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
+\image{481-4}{Slopes and Slopes Double 2 x 3 an 2 x 1, Blue}{}
 \image{481-6}{Slopes Regular, Double, Angle, Valley and Corner, Blue}{}
 \image{483-5}{Angle, Valley and Corner Slopes, Blue}{}
 \image{482-4}{Slopes and Slopes Double 2 x 2, Blue}{}
-\image{915-1}{6 bricks with 16 and 20 studs and 3 Angle Bricks}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
+\image{915-1}{6 bricks with 16 and 20 studs and 3 Angle Bricks}{}
 \image{402-2}{White Turntables}{}
 \image{902-1}{5 Turntables}{2x}
 \image{801-1}{Gear Set}{}
-\image{802-1}{Gear Supplementary Set}{5x}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
+\image{802-1}{Gear Supplementary Set}{5x}
 \image{995-1}{Lighting Bricks with Color Filters}{}
 \end{flushleft}\end{figure}
 \newpage
