--- a/Latex/lego_tables.tex
+++ b/Latex/lego_tables.tex
@@ -26,12 +26,12 @@
 \hline\allelem{Island Xtreme Stunts}{46}{\$7}{1}{}{1}{}{2002}
 \hline\allelem{Adventurers}{62}{\$8}{1}{}{0}{}{2003}
 \hline\allelem{Domanico Delanico}{86}{\$0}{2}{(1)}{0}{(1)}{2003}
-\hline\allelem{Classic Basic}{1867}{\$0}{65}{(33)}{30}{(19)}{1950--1970}
+\hline\allelem{Classic Basic}{1879}{\$0}{67}{(34)}{30}{(19)}{1950--1970}
 \hline\allelem{Classic}{1731}{\$28}{29}{(26)}{11}{}{1958--1976}
 \hline\allelem{Classic Train}{513}{\$36}{18}{(9)}{14}{(6)}{1966--1970}
 \hline\allelem{Classic Baseplate}{23}{\$6}{16}{(8)}{11}{(6)}{1954--1972}
 \hline\hline
-All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegotable}
+All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegotable}
 \newpage
 \begin{legotable}{Racers}
 \elem{Gear}{4566}{Yes}{Yes}{Yes}{2001}{8}{1}{\$2.99}
@@ -448,6 +448,8 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Curved and Round Bricks}{423-3}{No}{2}{Yes}{1966}{28}{5}{N/A}
 \hline
+\elem{4 Sixteens 2 Twenties}{416-1}{No}{0}{Yes}{1966}{6}{2}{N/A}
+\hline
 \elem{Cornerbricks}{417-4}{No}{Yes}{Yes}{1966}{10}{1}{N/A}
 \hline
 \elem{Slopes and Slopes Double 2 x 4, Blue}{480-5}{No}{Yes}{Yes}{1966}{14}{1}{N/A}
@@ -468,16 +470,16 @@ All Lego & 26402 & \$2218 & 294 & (220) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{White Turntables}{402-2}{No}{No}{Yes}{1964}{5}{1}{N/A}
 \hline
-\elem{5 Turntables}{902-1}{Yes}{1}{No}{1969}{5}{2}{N/A}
+\elem{5 Turntables}{902-1}{Yes}{1}{Yes}{1969}{5}{2}{N/A}
 \hline
 \elem{Gear Set}{801-1}{Yes}{No}{Yes}{1970}{111}{1}{N/A}
 \hline
 \elem{Gear Supplementary Set}{802-1}{Yes}{1}{Yes}{1970}{30}{5}{N/A}
 \hline
-\elem{Lighting Bricks with Color Filters}{995-1}{Yes}{No}{No}{1969}{15}{1}{N/A}
+\elem{Lighting Bricks with Color Filters}{995-1}{Yes}{No}{Yes}{1969}{15}{1}{N/A}
 \hline
 \hline
-\bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1867&\$0.00&65 (33)
+\bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1879&\$0.00&67 (34)
 \end{legotable}
 \begin{legotable}{Classic}
 \elem{Small House}{212-1}{Yes}{No}{No}{1958}{21}{1}{N/A}
