Added Weight info for most sets

--- a/Latex/lego_images.tex
+++ b/Latex/lego_images.tex
@@ -324,7 +324,7 @@
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
 \image{220-1}{2 x 2 Bricks}{2x}
-\image{224-3}{2 x 2 Curved Bricks}{}
+\image{224-3}{2 x 2 Curved Bricks}{2x}
 \image{423-3}{Curved and Round Bricks}{5x}
 \image{416-1}{4 Sixteens 2 Twenties}{2x}
 \end{flushleft}\end{figure}
@@ -398,16 +398,17 @@
 \image{103-1}{4.5V Motor Set with Rubber Tracks}{2x}
 \image{126-1}{Steam Locomotive}{}
 \image{125-1}{Tipping Wagon}{}
-\image{150-1}{Straight Track}{4x}
+\image{343-1}{Train Ferry}{}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
+\image{903-1}{Train Wheels and Couplers}{4x}
+\image{150-1}{Straight Track}{4x}
 \image{151-1}{Curved Track}{4x}
 \image{154-1}{Switch Track}{}
-\image{155-1}{2 Cross Rails}{2x}
-\image{158-1}{Railroad Crossing Gate}{2x}
 \end{flushleft}\end{figure}
 \begin{figure}[H]\begin{flushleft}
-\image{343-1}{Train Ferry}{}
+\image{155-1}{2 Cross Rails}{2x}
+\image{158-1}{Railroad Crossing Gate}{2x}
 \end{flushleft}\end{figure}
 \newpage
 \section*{\centering \hyperref[contents]{Classic Baseplate}}\label{image:Classic Baseplate}
