--- a/Latex/lego_tables.tex
+++ b/Latex/lego_tables.tex
@@ -26,12 +26,12 @@
 \hline\allelem{Island Xtreme Stunts}{46}{\$7}{1}{}{1}{}{2002}
 \hline\allelem{Adventurers}{62}{\$8}{1}{}{0}{}{2003}
 \hline\allelem{Domanico Delanico}{86}{\$0}{2}{(1)}{0}{(1)}{2003}
-\hline\allelem{Classic Basic}{1879}{\$0}{67}{(34)}{30}{(19)}{1950--1970}
+\hline\allelem{Classic Basic}{1899}{\$0}{68}{(34)}{30}{(19)}{1950--1970}
 \hline\allelem{Classic}{1731}{\$28}{29}{(26)}{11}{}{1958--1976}
-\hline\allelem{Classic Train}{513}{\$36}{18}{(9)}{14}{(6)}{1966--1970}
+\hline\allelem{Classic Train}{553}{\$36}{22}{(10)}{15}{(7)}{1966--1970}
 \hline\allelem{Classic Baseplate}{23}{\$6}{16}{(8)}{11}{(6)}{1954--1972}
 \hline\hline
-All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegotable}
+All Lego & 26474 & \$2218 & 301 & (222) & 213 & (170) & 1950--2010\end{alllegotable}
 \newpage
 \begin{legotable}{Racers}
 \elem{Gear}{4566}{Yes}{Yes}{Yes}{2001}{8}{1}{\$2.99}
@@ -444,7 +444,7 @@ All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{2 x 2 Bricks}{220-1}{No}{1}{Yes}{1958}{20}{2}{N/A}
 \hline
-\elem{2 x 2 Curved Bricks}{224-3}{No}{Yes}{Yes}{1958}{20}{1}{N/A}
+\elem{2 x 2 Curved Bricks}{224-3}{No}{1}{Yes}{1958}{20}{2}{N/A}
 \hline
 \elem{Curved and Round Bricks}{423-3}{No}{2}{Yes}{1966}{28}{5}{N/A}
 \hline
@@ -479,7 +479,7 @@ All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegota
 \elem{Lighting Bricks with Color Filters}{995-1}{Yes}{No}{Yes}{1969}{15}{1}{N/A}
 \hline
 \hline
-\bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1879&\$0.00&67 (34)
+\bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1899&\$0.00&68 (34)
 \end{legotable}
 \begin{legotable}{Classic}
 \elem{Small House}{212-1}{Yes}{No}{No}{1958}{21}{1}{N/A}
@@ -544,6 +544,10 @@ All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Tipping Wagon}{125-1}{Yes}{No}{No}{1969}{20}{1}{N/A}
 \hline
+\elem{Train Ferry}{343-1}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
+\hline
+\elem{Train Wheels and Couplers}{903-1}{Yes}{1}{Yes}{1969}{10}{4}{N/A}
+\hline
 \elem{Straight Track}{150-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
 \hline
 \elem{Curved Track}{151-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
@@ -554,10 +558,8 @@ All Lego & 26414 & \$2218 & 296 & (221) & 212 & (169) & 1950--2010\end{alllegota
 \hline
 \elem{Railroad Crossing Gate}{158-1}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
 \hline
-\elem{Train Ferry}{343-1}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
 \hline
-\hline
-\bfseries Sum&&\multicolumn{2}{r|}{14 (6)}&\multicolumn{2}{r|}{1966--1970}&513&\$36.38&18 (9)
+\bfseries Sum&&\multicolumn{2}{r|}{15 (7)}&\multicolumn{2}{r|}{1966--1970}&553&\$36.38&22 (10)
 \end{legotable}
 \begin{legotable}{Classic Baseplate}
 \elem{Individual 10 x 20 Baseplate}{700-E}{No}{2}{Yes}{1954}{1}{2}{N/A}
