Updated last lego, all is bagged

--- a/Latex/lego_tables.tex
+++ b/Latex/lego_tables.tex
@@ -1,5 +1,5 @@
 \begin{alllegotable}
-\allelem{Racers}{1658}{\$179}{26}{(25)}{23}{(22)}{2001--2009}
+\allelem{Racers}{1658}{\$179}{26}{(25)}{24}{(23)}{2001--2009}
 \hline\allelem{Technic}{4138}{\$460}{15}{}{15}{}{1998--2010}
 \hline\allelem{City}{2140}{\$233}{20}{(14)}{19}{(14)}{2004--2009}
 \hline\allelem{System}{286}{\$25}{17}{(14)}{16}{(13)}{1997--2001}
@@ -31,7 +31,7 @@
 \hline\allelem{Classic Train}{553}{\$36}{22}{(10)}{15}{(7)}{1966--1970}
 \hline\allelem{Classic Baseplate}{23}{\$6}{16}{(8)}{11}{(6)}{1954--1972}
 \hline\hline
-All Lego & 26474 & \$2218 & 301 & (222) & 213 & (170) & 1950--2010\end{alllegotable}
+All Lego & 26474 & \$2218 & 301 & (222) & 214 & (171) & 1950--2010\end{alllegotable}
 \newpage
 \begin{legotable}{Racers}
 \elem{Gear}{4566}{Yes}{Yes}{Yes}{2001}{8}{1}{\$2.99}
@@ -64,7 +64,7 @@ All Lego & 26474 & \$2218 & 301 & (222) & 213 & (170) & 1950--2010\end{alllegota
 \hline
 \elem{Le Mans Racer polybag}{7802}{Yes}{Yes}{Yes}{2009}{29}{1}{\$2.99}
 \hline
-\elem{Ice Rally}{8124}{Yes}{No}{Yes}{2009}{172}{1}{\$14.99}
+\elem{Ice Rally}{8124}{Yes}{Yes}{Yes}{2009}{172}{1}{\$14.99}
 \hline
 \elem{Nitro Terminator}{8383}{Yes}{Yes}{Yes}{2003}{70}{1}{\$9.99}
 \hline
@@ -85,38 +85,38 @@ All Lego & 26474 & \$2218 & 301 & (222) & 213 & (170) & 1950--2010\end{alllegota
 \elem{Race Rig}{8162}{Yes}{Yes}{Yes}{2009}{104}{1}{\$12.99}
 \hline
 \hline
-\bfseries Sum&&\multicolumn{2}{r|}{23 (22)}&\multicolumn{2}{r|}{2001--2009}&1658&\$178.74&26 (25)
+\bfseries Sum&&\multicolumn{2}{r|}{24 (23)}&\multicolumn{2}{r|}{2001--2009}&1658&\$178.74&26 (25)
 \end{legotable}
 \begin{legotable}{Technic}
-\elem{Tricycle}{1257}{Yes}{Yes}{No}{1999}{30}{1}{Free}
+\elem{Tricycle}{1257}{Yes}{Yes}{Yes}{1999}{30}{1}{Free}
 \hline
-\elem{Buggy}{1258}{Yes}{Yes}{No}{1999}{29}{1}{Free}
+\elem{Buggy}{1258}{Yes}{Yes}{Yes}{1999}{29}{1}{Free}
 \hline
-\elem{Motorbike}{1259}{Yes}{Yes}{No}{1999}{28}{1}{Free}
+\elem{Motorbike}{1259}{Yes}{Yes}{Yes}{1999}{28}{1}{Free}
 \hline
-\elem{Car}{1260}{Yes}{Yes}{No}{1999}{26}{1}{Free}
+\elem{Car}{1260}{Yes}{Yes}{Yes}{1999}{26}{1}{Free}
 \hline
-\elem{Rover Discovery}{8203}{Yes}{Yes}{No}{1998}{37}{1}{\$4.99}
+\elem{Rover Discovery}{8203}{Yes}{Yes}{Yes}{1998}{37}{1}{\$4.99}
 \hline
-\elem{Sky Flyer 1}{8204}{Yes}{Yes}{No}{1998}{41}{1}{\$4.99}
+\elem{Sky Flyer 1}{8204}{Yes}{Yes}{Yes}{1998}{41}{1}{\$4.99}
 \hline
-\elem{Mini Tractor}{8281}{Yes}{Yes}{No}{2006}{121}{1}{\$9.99}
+\elem{Mini Tractor}{8281}{Yes}{Yes}{Yes}{2006}{121}{1}{\$9.99}
 \hline
-\elem{Compact Excavator}{8047}{Yes}{Yes}{No}{2010}{252}{1}{\$24.99}
+\elem{Compact Excavator}{8047}{Yes}{Yes}{Yes}{2010}{252}{1}{\$24.99}
 \hline
-\elem{Wheel Loader}{8271}{Yes}{Yes}{No}{2007}{200}{1}{\$19.99}
+\elem{Wheel Loader}{8271}{Yes}{Yes}{Yes}{2007}{200}{1}{\$19.99}
 \hline
-\elem{Telehandler}{8283}{Yes}{Yes}{No}{2006}{323}{1}{\$29.99}
+\elem{Telehandler}{8283}{Yes}{Yes}{Yes}{2006}{323}{1}{\$29.99}
 \hline
-\elem{Aircraft}{8434}{Yes}{Yes}{No}{2004}{445}{1}{\$34.99}
+\elem{Aircraft}{8434}{Yes}{Yes}{Yes}{2004}{445}{1}{\$34.99}
 \hline
-\elem{Snow Groomer}{8263}{Yes}{Yes}{No}{2009}{590}{1}{\$49.99}
+\elem{Snow Groomer}{8263}{Yes}{Yes}{Yes}{2009}{590}{1}{\$49.99}
 \hline
-\elem{Crawler Crane}{8288}{Yes}{Yes}{No}{2006}{800}{1}{\$49.99}
+\elem{Crawler Crane}{8288}{Yes}{Yes}{Yes}{2006}{800}{1}{\$49.99}
 \hline
-\elem{Motorized Excavator}{8043}{Yes}{Yes}{No}{2010}{1123}{1}{\$199.99}
+\elem{Motorized Excavator}{8043}{Yes}{Yes}{Yes}{2010}{1123}{1}{\$199.99}
 \hline
-\elem{Motor Set}{8287}{Yes}{Yes}{No}{2006}{93}{1}{\$29.99}
+\elem{Motor Set}{8287}{Yes}{Yes}{Yes}{2006}{93}{1}{\$29.99}
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{15\hspace{7pt}\ }&\multicolumn{2}{r|}{1998--2010}&4138&\$459.89&15
@@ -482,81 +482,81 @@ All Lego & 26474 & \$2218 & 301 & (222) & 213 & (170) & 1950--2010\end{alllegota
 \bfseries Sum&&\multicolumn{2}{r|}{30 (19)}&\multicolumn{2}{r|}{1950--1970}&1899&\$0.00&68 (34)
 \end{legotable}
 \begin{legotable}{Classic}
-\elem{Small House}{212-1}{Yes}{No}{No}{1958}{21}{1}{N/A}
+\elem{Small House}{212-1}{Yes}{No}{Yes}{1958}{21}{1}{N/A}
 \hline
-\elem{Small House}{213-2}{Yes}{No}{No}{1958}{21}{1}{N/A}
+\elem{Small House}{213-2}{Yes}{No}{Yes}{1958}{21}{1}{N/A}
 \hline
-\elem{Family}{200-1}{Yes}{No}{No}{1974}{78}{1}{\$4.99}
+\elem{Family}{200-1}{Yes}{No}{Yes}{1974}{78}{1}{\$4.99}
 \hline
-\elem{Complete Kitchen Set}{261-4}{Yes}{No}{No}{1971}{158}{1}{N/A}
+\elem{Complete Kitchen Set}{261-4}{Yes}{No}{Yes}{1971}{158}{1}{N/A}
 \hline
-\elem{Antique Car}{329-1}{Yes}{No}{No}{1967}{111}{1}{N/A}
+\elem{Antique Car}{329-1}{Yes}{No}{Yes}{1967}{111}{1}{N/A}
 \hline
-\elem{Jeep}{330-3}{Yes}{Yes}{No}{1968}{65}{1}{N/A}
+\elem{Jeep}{330-3}{Yes}{Yes}{Yes}{1968}{65}{1}{N/A}
 \hline
-\elem{Transport Truck}{335-2}{Yes}{No}{No}{1967}{99}{1}{N/A}
+\elem{Transport Truck}{335-2}{Yes}{No}{Yes}{1967}{99}{1}{N/A}
 \hline
-\elem{Fire Engine}{336-1}{Yes}{Yes}{No}{1968}{76}{1}{N/A}
+\elem{Fire Engine}{336-1}{Yes}{Yes}{Yes}{1968}{76}{1}{N/A}
 \hline
-\elem{Truck with Crane and Caterpillar Track}{337-2}{Yes}{No}{No}{1969}{92}{1}{N/A}
+\elem{Truck with Crane and Caterpillar Track}{337-2}{Yes}{No}{Yes}{1969}{92}{1}{N/A}
 \hline
-\elem{Bungalow}{344-1}{Yes}{No}{No}{1969}{77}{1}{N/A}
+\elem{Bungalow}{344-1}{Yes}{No}{Yes}{1969}{77}{1}{N/A}
 \hline
-\elem{Fire Station with Mini Cars}{347-1}{Yes}{No}{No}{1970}{189}{1}{N/A}
+\elem{Fire Station with Mini Cars}{347-1}{Yes}{No}{Yes}{1970}{189}{1}{N/A}
 \hline
-\elem{Garage with Automatic Doors}{348-1}{Yes}{1}{No}{1971}{38}{2}{\$0.99}
+\elem{Garage with Automatic Doors}{348-1}{Yes}{1}{Yes}{1971}{38}{2}{\$0.99}
 \hline
-\elem{Loader Hopper with Truck}{351-1}{Yes}{No}{No}{1971}{165}{1}{\$2.49}
+\elem{Loader Hopper with Truck}{351-1}{Yes}{No}{Yes}{1971}{165}{1}{\$2.49}
 \hline
-\elem{Police Car}{611-1}{Yes}{Yes}{No}{1973}{15}{1}{\$3.49}
+\elem{Police Car}{611-1}{Yes}{Yes}{Yes}{1973}{15}{1}{\$3.49}
 \hline
-\elem{Fork Lift with Driver}{615-2}{Yes}{No}{No}{1975}{13}{1}{N/A}
+\elem{Fork Lift with Driver}{615-2}{Yes}{No}{Yes}{1975}{13}{1}{N/A}
 \hline
-\elem{Fire Truck}{602-2}{Yes}{No}{No}{1970}{24}{1}{N/A}
+\elem{Fire Truck}{602-2}{Yes}{No}{Yes}{1970}{24}{1}{N/A}
 \hline
-\elem{Shell Tanker Truck}{621-2}{Yes}{Yes}{No}{1970}{35}{1}{N/A}
+\elem{Shell Tanker Truck}{621-2}{Yes}{Yes}{Yes}{1970}{35}{1}{N/A}
 \hline
-\elem{Baggage Carts}{622-2}{Yes}{Yes}{No}{1970}{33}{1}{N/A}
+\elem{Baggage Carts}{622-2}{Yes}{Yes}{Yes}{1970}{33}{1}{N/A}
 \hline
-\elem{White Car and Camper}{623-2}{Yes}{Yes}{No}{1970}{32}{1}{N/A}
+\elem{White Car and Camper}{623-2}{Yes}{Yes}{Yes}{1970}{32}{1}{N/A}
 \hline
-\elem{Mobile Crane}{643-2}{Yes}{No}{No}{1971}{27}{1}{N/A}
+\elem{Mobile Crane}{643-2}{Yes}{No}{Yes}{1971}{27}{1}{N/A}
 \hline
-\elem{Milk Float \& Trailer}{645-2}{Yes}{Yes}{No}{1971}{47}{1}{N/A}
+\elem{Milk Float \& Trailer}{645-2}{Yes}{Yes}{Yes}{1971}{47}{1}{N/A}
 \hline
-\elem{Mobile Site Office}{646-2}{Yes}{Yes}{No}{1971}{43}{1}{N/A}
+\elem{Mobile Site Office}{646-2}{Yes}{Yes}{Yes}{1971}{43}{1}{N/A}
 \hline
-\elem{Car with Trailer and Racing Car}{650-1}{Yes}{No}{No}{1972}{30}{1}{\$5.49}
+\elem{Car with Trailer and Racing Car}{650-1}{Yes}{No}{Yes}{1972}{30}{1}{\$5.49}
 \hline
-\elem{Spirit of St. Louis}{661-1}{Yes}{No}{No}{1976}{50}{1}{\$9.99}
+\elem{Spirit of St. Louis}{661-1}{Yes}{No}{Yes}{1976}{50}{1}{\$9.99}
 \hline
-\elem{Sterling Super Caravelle}{1550}{Yes}{1}{No}{1972}{44}{2}{N/A}
+\elem{Sterling Super Caravelle}{1550}{Yes}{1}{Yes}{1972}{44}{2}{N/A}
 \hline
-\elem{Sterling Luggage Carrier}{1551}{Yes}{1}{No}{1972}{33}{2}{N/A}
+\elem{Sterling Luggage Carrier}{1551}{Yes}{1}{Yes}{1972}{33}{2}{N/A}
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{11\hspace{7pt}\ }&\multicolumn{2}{r|}{1958--1976}&1731&\$28.43&29 (26)
 \end{legotable}
 \begin{legotable}{Classic Train}
-\elem{4.5V Motor Set with Rubber Tracks}{103-1}{Yes}{0}{No}{1969}{20}{2}{N/A}
+\elem{4.5V Motor Set with Rubber Tracks}{103-1}{Yes}{0}{Yes}{1969}{20}{2}{N/A}
 \hline
-\elem{Steam Locomotive}{126-1}{Yes}{No}{No}{1970}{60}{1}{\$5.49}
+\elem{Steam Locomotive}{126-1}{Yes}{No}{Yes}{1970}{60}{1}{\$5.49}
 \hline
-\elem{Tipping Wagon}{125-1}{Yes}{No}{No}{1969}{20}{1}{N/A}
+\elem{Tipping Wagon}{125-1}{Yes}{No}{Yes}{1969}{20}{1}{N/A}
 \hline
-\elem{Train Ferry}{343-1}{Yes}{Yes}{No}{1968}{147}{1}{N/A}
+\elem{Train Ferry}{343-1}{Yes}{Yes}{Yes}{1968}{147}{1}{N/A}
 \hline
 \elem{Train Wheels and Couplers}{903-1}{Yes}{1}{Yes}{1969}{10}{4}{N/A}
 \hline
-\elem{Straight Track}{150-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\elem{Straight Track}{150-1}{Yes}{4}{Yes}{1966}{25}{4}{\$1.99}
 \hline
-\elem{Curved Track}{151-1}{Yes}{4}{No}{1966}{25}{4}{\$1.99}
+\elem{Curved Track}{151-1}{Yes}{4}{Yes}{1966}{25}{4}{\$1.99}
 \hline
-\elem{Switch Track}{154-1}{Yes}{Yes}{No}{1967}{4}{1}{\$1.99}
+\elem{Switch Track}{154-1}{Yes}{Yes}{Yes}{1967}{4}{1}{\$1.99}
 \hline
-\elem{2 Cross Rails}{155-1}{Yes}{2}{No}{1967}{14}{2}{\$1.99}
+\elem{2 Cross Rails}{155-1}{Yes}{2}{Yes}{1967}{14}{2}{\$1.99}
 \hline
-\elem{Railroad Crossing Gate}{158-1}{Yes}{2}{No}{1969}{7}{2}{\$4.50}
+\elem{Railroad Crossing Gate}{158-1}{Yes}{2}{Yes}{1969}{7}{2}{\$4.50}
 \hline
 \hline
 \bfseries Sum&&\multicolumn{2}{r|}{15 (7)}&\multicolumn{2}{r|}{1966--1970}&553&\$36.38&22 (10)
